--- a/html/01_JS개요.html
+++ b/html/01_JS개요.html
@@ -10,7 +10,7 @@
     <h1>Script 언어란?</h1>
     
     <pre>
-        기본 프롬그램의 동작을
+        기본 프로그램의 동작을
         사용자의 요구에 맞게 수행되도록 해주는 용도의 언어
 
         별도의 소스코드 컴파일(이진수로 번역)을 하지 않고
