240112_ 자바스크립트
06_입출금하기(숙제)

--- a/html/06_입출금하기.html
+++ b/html/06_입출금하기.html
@@ -49,8 +49,8 @@
 
 
     <div class="bank">
-        <div>잔액 : 원</div>
-        <div>금액 : <input type="number"></div>
+        <div>잔액 : 10000 원</div>
+        <div>금액 : <input type="number" id="input"></div>
         <br>
         <button onclick="deposit()">입금</button>
         <button onclick="withdrawal()">출금</button>
