--- a/html/02_변수와자료형.html
+++ b/html/02_변수와자료형.html
@@ -14,7 +14,9 @@
         *변수에 이름을 붙이고 원하는 갑을 대입하면
          필요한 곳에서 변수명을 호출하여 저장된 값을 사용할 수 있다
         
-        <h3>변수명 명명 규칙</h3>
+        <h3>변수명 명명 규칙
+          <!-- 변수 이름 짓는 방법 -->
+        </h3>
         - 의미 있는 이름을 작성 (대충 a,b 이런식으로 짓는것을 지양)
         - 대, 소문자 구문
         - 특수 문자는 _ (언더스코어) 만 사용 가능. (단, 첫 글자 제외)
