--- a/html/06_입출금하기.html
+++ b/html/06_입출금하기.html
@@ -49,8 +49,8 @@
 
 
     <div class="bank">
-        <div>잔액 : <span id="balance"></span> 원</div>
-        <div>금액 : <input type="number" id="input"></div>
+        <div>잔액 : <span id="balance">10000</span> 원</div>
+        <label for="input">금액 : <input type="number" id="input"></label>
         <br>
         
         <div>
