--- a/html/06_입출금하기.html
+++ b/html/06_입출금하기.html
@@ -48,16 +48,33 @@
 
 
 
-    <div class="bank">
-        <div>잔액 : <span id="balance">10000</span> 원</div>
-        <label for="input">금액 : <input type="number" id="input"></label>
-        <br>
-        
-        <div>
-            <button onclick="deposit()">입금</button>
-            <button onclick="withdrawal()">출금</button>
+
+    <hr><hr><hr>
+
+    <h2>입출금</h2>
+
+
+    <div class="account">
+      <div class="row">
+
+        <div>잔액 :
+           <span id="output"></span>원
         </div>
+
+      </div>
+      <div class="row input-row">
+
+        금액 : <input type="number" id="input">원
+      </div>
+
+      <div class="row btn-row">
+
+        <button onclick="deposit()">입금</button>
+        <button onclick="withdrawal()">출금</button>
+        
+      </div>
     </div>
+
 
 
 
