--- a/html/06_입출금하기.html
+++ b/html/06_입출금하기.html
@@ -64,7 +64,8 @@
       </div>
       <div class="row input-row">
 
-        금액 : <input type="number" id="input">원
+        <label for="input">금액 : </label>
+        <input type="number" id="input">원
       </div>
 
       <div class="row btn-row">
