--- a/html/14_입력한색으로변경.html
+++ b/html/14_입력한색으로변경.html
@@ -9,32 +9,34 @@
 </head>
 <body>
 
-    <div class="containerbox">
-        <div class="conbox">
-            <div id="box"></div>
-            <input type="text" id="input">
-        </div>
-        <div class="conbox">
-            <div id="box"></div>
-            <input type="text" id="input">
-        </div>
-        <div class="conbox">
-            <div id="box"></div>
-            <input type="text" id="input">
-        </div>
-        <div class="conbox">
-            <div id="box"></div>
-            <input type="text" id="input">
-        </div>
-        <div class="conbox">
-            <div id="box"></div>
-            <input type="text" id="input">
-        </div>
-    </div>
+
+    <main>
+        <section class="color-area">
+            <div class="container">
+                <div class="box"></div>
+                <input type="text" class="input">
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <input type="text" class="input">
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <input type="text" class="input">
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <input type="text" class="input">
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <input type="text" class="input">
+            </div>
+
+        </section>
 
         <button id="btn">색상변경</button>
-
-
+    </main>
 
 
 
