240122_자바 스크립트

--- a/html/20_JS객체.html
+++ b/html/20_JS객체.html
@@ -21,7 +21,7 @@
     -> Key == 변수명/메서드명 (중복 X)
     -> Value == 값, 함수
 
-    * K:V가 모여있는 혀잇ㄱ == Map (맵)
+    * K:V가 모여있는 형식 == Map (맵)
 
     - JS 객체 작성법
     {K:V, K:V, K:V, ...}
@@ -30,12 +30,12 @@
     [JS 객체 생성 방법] 
     1. { } : JS 객체 리터럴 표기법을 이용한 생성
 
-    2. 생성자 함수 : 생성자 + new 생성자()를 이용한 생선
+    2. 생성자 함수 : 생성자 + new 생성자()를 이용한 생성
     
 
 
     ** 리터럴 == 값 **
-     - valur 채신에 사용
+     - value 대신에 사용
     - 각 자료형 마다 리터럴(값) 표기법이 별도로 존재
 
     ex)
