240123_자바스크립트

--- a/html/23_스톱워치.html
+++ b/html/23_스톱워치.html
@@ -26,7 +26,8 @@
       <button id="resetBtn">RESET</button>  <!-- 초기화 -->
     </div>
     
-    <ul id="recordContainer"></ul>
+    <ul id="recordContainer">
+    </ul>
 
   </main>
   
