240123_로또판생성

--- a/html/20_JS객체.html
+++ b/html/20_JS객체.html
@@ -68,6 +68,19 @@
         * 생성자 함수를 이용한 객체 생성 방법
          -> const 객체명 = new 생성자 함수
   </pre>
+  <pre>
+    *생성자란? (== 생성자 함수)
+     - 객제 생성시 수행되는 기능 (함수)
+
+     - 특정한 모양의 객체가 다수 필요한 경우
+        이를 만들기 위한 코드의 중복을 최소화
+        + 재사용성 증거
+
+        * new 연산자  (메모리에) 객체를 새롭게 생성(할당)
+
+        * 생성자 함수를 이용한 객체 생성 방법
+         -> const 객체명 = new 생성자 함수
+  </pre>
 
   <button id="btn3">생성자 함수</button>
 
