--- a/html/27_로또판생성하기.html
+++ b/html/27_로또판생성하기.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="../css/27_로또판생성하기.css">
 </head>
 <body>
+
+  <button id="creat">로또판 생성</button>
+  <div id="table" >
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+    <span>4</span>
+    <span>5</span>
+  </div>
   
 
   <script src="../js/27_로또판생성하기.js"></script>
