--- a/html/12_이벤트.html
+++ b/html/12_이벤트.html
@@ -27,7 +27,7 @@
         -> 브라우저에서 이벤트가 감지 될 때 까지 대기하다가
           감지가 되었을 때 연결된 기능(함수)를 수행하는 것
           
-        - 이벤트 리스터는 "on 이벤트명" 형식으로 작성됨
+        - 이벤트 리스너는 "on 이벤트명" 형식으로 작성됨
 
         ex) onclick, onchange, onsubmit, onkeyup ...
 
